<resources>
    <string name="app_name">GroceryMerchantApp</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_home_">Home_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Team Tilly</string>
    <string name="nav_header_subtitle">Store@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inventories">Inventory</string>
    <string name="menu_cat">Add Category</string>
    <string name="menu_items">Add Items</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_order">Orders</string>
    <string name="menu_shares">Share</string>


    <string name="menu_reports">Reports</string>


    <string name="menu_logout">Logout</string>
    <string name="menu_setting_vat">Setting</string>
    <string name="menu_support">Support</string>
    <string name="menu_inventory">All Inventory</string>
    <string name="menu_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

</resources>
